apps/grafana/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: argocd
spec:
  selector:
    app: grafana
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
